# skysql-ai-crew

./: .env.example  .gitignore  LICENSE  README.md  crew.yaml  pyproject.toml  requirements.txt
src/skysql_ai_crew/: crew.py  main.py
src/skysql_ai_crew/config/: agents.yaml  tasks.yaml
src/skysql_ai_crew/tools/: skysql_tool.py
src/skysql_crew/: crew.py  main.py
src/skysql_crew/config/: agents.yaml
src/skysql_crew/tools/: skysql_tools.py
